[package]
name = "actix-web-101"
version = "0.1.0"
authors = ["glassonion1 <taisuke.fujita@layerx.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }