[package]
name = "actix-web-otel"
version = "0.1.0"
authors = ["glassonion1 <taisuke.fujita@layerx.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-service = "2.0.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
opentelemetry = { version = "0.15", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.14"
tracing-subscriber = "0.2.19"