[package]
name = "blockchain"
version = "0.0.1"
authors = ["glassonion1 <glassonion999@gmail.com>"]
edition = "2018"
build = "build.rs"
cargo-features = ["resolver"]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
crypto_box = "0.6.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
tokio = { version = "0.2", features = ["full"] }
web3 = "0.14.0"
anyhow = "1.0"