[package]
name = "blockchain_client"
version = "0.0.1"
authors = ["glassonion1 <glassonion999@gmail.com>"]
edition = "2021"

[dependencies]
crypto_box = "0.6.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }