[package]
name = "remoteattestationenclave"
version = "0.0.1"
authors = ["glassonion1 <glassonion999@gmail.com>"]
edition = "2018"

[lib]
name = "remoteattestationenclave"
crate-type = ["staticlib"]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["net"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
http_req = { git = "https://github.com/mesalock-linux/http_req-sgx", rev = "sgx_1.1.3" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] } 
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", rev = "sgx_1.1.3" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
bit-vec = { version = "*", default-features = false}
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
pem = { version = "0.8.2", git = "https://github.com/mesalock-linux/pem-rs-sgx" }

[features]
default = []