[package]
name = "ra-client"
version = "0.1.0"
authors = ["glassonion1 <glassonion999@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.5"
webpki = "0.21"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
itertools = "*"
base64 = "0.9.2"
serde_json = "1.0"
num-bigint = "*"
bit-vec = "*"
hex = "*"
pem = "0.8.2"
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }