[package]
name = "attestation"
version = "0.0.1"
authors = ["glassonion1 <glassonion999@gmail.com>"]
edition = "2018"

[dependencies]
# common
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["net"] }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }

# for verifier
pem = { version = "0.8.2", git = "https://github.com/mesalock-linux/pem-rs-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", rev = "sgx_1.1.3" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }

# for ecdsa
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "*", default-features = false}

# for ias
http_req = { git = "https://github.com/mesalock-linux/http_req-sgx", rev = "sgx_1.1.3" }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]

[features]
default = []